kibana/kibana-ingress.yaml
##kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elk
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.barid.ma
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana
            port:
              number: 5601
